Teste de Modificação commit novo

--- a/vendas.html
+++ b/vendas.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Página de Vendas</h1>
+    <p>Mudança na página</p>
     <a href="index.html">Ir para a página home</a>
 </body>
 </html>
